welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:3: error: not found: value hour7
  if(talking && hour7 && hour>=20)
                ^