welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean =
{
  if(talking && hour7 && hour>=20)
  {
    return true
  }
  return false
}